# OOP_Labs

./: CMakeLists.txt  README.md
lab1/: CMakeLists.txt
lab1/src/: CMakeLists.txt  find_numbers.cpp  find_numbers.h
lab1/tests/: CMakeLists.txt  test_main.cpp
lab2/: CMakeLists.txt
lab2/src/: main.cpp  twelve.cpp  twelve.h
lab2/tests/: test_twelve.cpp
lab3/: CMakeLists.txt
lab3/include/: figure.h  pentagon.h  rhombus.h  trapeze.h
lab3/src/: figure.cpp  main.cpp  pentagon.cpp  rhombus.cpp  trapeze.cpp
lab3/tests/: test_figures.cpp
lab4/: CMakeLists.txt  main.cpp
lab4/include/: array.h  factory.h  figure.h  point.h  shapes.h
lab4/tests/: test_figures.cpp
lab5/: CMakeLists.txt  main.cpp
lab5/include/: list_resource.h  pmr_vector.h
lab5/tests/: pmr_tests.cpp
src/: find_numbers.cpp  main.cpp
tests/: CMakeLists.txt
